ndb - bug#27286 (5.0 version)   make sure master is sendable